@@ -1,3 +1,9 @@
+1999-02-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* about.cc (about_dialog): Use asprintf/sprintf for gettext
+	migration later.
+	(populate): Make the version string using asprintf/sprintf.
+
 1999-02-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* Version 1.2.1.
